--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -2,6 +2,11 @@
     filter: blur(5px);
     transition: filter 0.3s;
   }
+  @media (min-width: 1024px) and (max-width: 1500px) {
+    .responsive-div {
+      margin-left: 220px;
+    }
+  }
   
 
   
