--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -9,9 +9,9 @@
   img {
 	  object-fit: cover;
   }
-  body {
+  /* body {
 	  background-color: white;
-  }
+  } */
   a {
 	  text-decoration: none;
 	  color: white;
