--- a/src/managesnap/components/Main.css
+++ b/src/managesnap/components/Main.css
@@ -87,3 +87,34 @@
   ::-webkit-scrollbar{
     display: none;
   }
+
+.selecting-none {
+  user-select: none;
+}
+
+.cursor-col-resize {
+  cursor: col-resize;
+}
+
+.transition-width {
+  transition: width 0.15s ease-out;
+}
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(155, 155, 155, 0.5);
+  border-radius: 20px;
+  border: transparent;
+}
